change skills percentage to skills level and fix some bug on mobile view

--- a/src/scss/components/_about.scss
+++ b/src/scss/components/_about.scss
@@ -73,9 +73,11 @@
 @media screen and(max-width: 576px) {
   .about {
     &__content {
+    
       &__wrapper {
         display: flex;
         flex-direction: column;
+        margin-top: 20px;
       }
     }
     &__img {
