--- a/src/scss/components/_award.scss
+++ b/src/scss/components/_award.scss
@@ -1,4 +1,5 @@
 .award {
+  margin-top: 20px;
   &__card {
     background: color('card');
     padding: 20px;
