--- a/src/scss/components/_education.scss
+++ b/src/scss/components/_education.scss
@@ -1,4 +1,5 @@
 .table {
+  margin-top: 20px;
   border: none;
   border-collapse: collapse;
   border: 1px solid color('card');
