--- a/src/scss/components/_header.scss
+++ b/src/scss/components/_header.scss
@@ -14,6 +14,7 @@
     background: color('card');
     backdrop-filter: blur(100px);
     box-shadow: 2px 2px 4px -2px color('primary');
+    z-index: 10;
   }
 }
 
